mac getIpByName liefert name von IPnum


##################################################################
opsi-winst/opsi-script (4.12.4.1) experimental; urgency=low

  * some more log on startup
  * oslog: makebakfiles: rename instead of copy (much faster)
  * fix uefi detection on win10 >= release 1004
  * osfuncwin: WinIsUefi: the fix is here
  * macos: change mountpoint to /Network/opsi_depot
  * osbatchgui: removed formresize function

-- d.oertel <d.oertel@uib.de> Thu, 27 Aug 2020 15:00

opsi-winst/opsi-script (4.12.4.0) experimental; urgency=low

  * includes changes from github merge request "Feature / Implementation parity between WinBatch, DosBatch and ExecWith"
    * DosBatch-Sections to be executed with elevated privileges like WinBatch could be using /RunElevated
    * /Run*-Parameters for ExecWith
    * Output catching, /showouput and getOutStreamFromSection support for WinBatch
  * compiled with lazarus 2.0.10
  * fix for /showoutput at win64
  * fix for runningonuefi if w10 release >= 2004
  * osparser: execDosBatch: additional parameters now allowed for shellInAnIcon &co:
     /runElevated
     /TimeoutSeconds <number>
     /WaitForProcessEnding <string>
     /LetThemGo

-- j.werner <j.werner@uib.de> Thu, 30 Jul 2020 17:54

opsi-winst/opsi-script (4.12.3.18) experimental; urgency=low

  * UTF8String replaced by String
  * AnsiToUTF8() removed accordingly
  * compiled with lazarus 2.0.10

-- j.werner <j.werner@uib.de> Thu, 30 Jul 2020 16:56

opsi-winst/opsi-script (4.12.3.17) stable; urgency=low

  * osfunc: StartProcess_cp: log message: 'Started process' now in utf8 encoding
  * osfunc: StartProcess_cp: use filename and parameters
  * compiled with lazarus 2.0.10

-- d.oertel <d.oertel@uib.de> Thu, 23 Jul 2020 15:00

opsi-winst/opsi-script (4.12.3.16) stable; urgency=low

  * oswebservice:sendlog: Log that using default if getLogsize failed
  * osfuncwin: some logprog in WinIsUefi
  * osfuncwin:  getW10Release